[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tokio-stream = { version = "0.1.15" }
futures = { version = "0.3.30", features= ["thread-pool"] }
local-ip-address = "0.6.1"
